# docs/swagger.json
@@ -42,7 +42,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "If logoutAllDevices=true, returns new tokens",
+                        "description": "If logoutOtherDevices=true, returns new tokens",
                         "schema": {
                             "$ref": "#/definitions/gin-boilerplate_internal_iam_dto.TokenResponse"
                         }
@@ -93,39 +93,6 @@
                     },
                     "401": {
                         "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/gin-boilerplate_pkg_response.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/auth/me": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    },
-                    {
-                        "DeviceID": []
-                    }
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Auth"
-                ],
-                "summary": "Get current user",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/gin-boilerplate_internal_iam_dto.UserResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/gin-boilerplate_pkg_response.ErrorResponse"
                         }
@@ -323,7 +290,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/gin-boilerplate_internal_iam_dto.RoleResponse"
+                            "$ref": "#/definitions/gin-boilerplate_internal_iam_dto.RoleDetailResponse"
                         }
                     },
                     "400": {
@@ -365,7 +332,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/gin-boilerplate_internal_iam_dto.RoleResponse"
+                            "$ref": "#/definitions/gin-boilerplate_internal_iam_dto.RoleDetailResponse"
                         }
                     },
                     "404": {
@@ -417,7 +384,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/gin-boilerplate_internal_iam_dto.RoleResponse"
+                            "$ref": "#/definitions/gin-boilerplate_internal_iam_dto.RoleDetailResponse"
                         }
                     },
                     "400": {
@@ -803,11 +770,44 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/gin-boilerplate_internal_iam_dto.UserResponse"
+                            "$ref": "#/definitions/gin-boilerplate_internal_iam_dto.UserDetailResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/gin-boilerplate_pkg_response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/me": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    },
+                    {
+                        "DeviceID": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Get current user",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/gin-boilerplate_internal_iam_dto.UserDetailResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/gin-boilerplate_pkg_response.ErrorResponse"
                         }
@@ -845,7 +845,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/gin-boilerplate_internal_iam_dto.UserResponse"
+                            "$ref": "#/definitions/gin-boilerplate_internal_iam_dto.UserDetailResponse"
                         }
                     },
                     "404": {
@@ -897,7 +897,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/gin-boilerplate_internal_iam_dto.UserResponse"
+                            "$ref": "#/definitions/gin-boilerplate_internal_iam_dto.UserDetailResponse"
                         }
                     },
                     "400": {
@@ -1007,8 +1007,13 @@
                     "type": "string"
                 },
                 "password": {
-                    "type": "string",
-                    "minLength": 6
+                    "type": "string"
+                },
+                "permissionIds": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 },
                 "roleIds": {
                     "type": "array",
@@ -1085,11 +1090,20 @@
                 }
             }
         },
-        "gin-boilerplate_internal_iam_dto.RoleResponse": {
+        "gin-boilerplate_internal_iam_dto.RoleDetailResponse": {
             "type": "object",
             "properties": {
                 "id": {
                     "type": "string"
+                },
+                "isDefault": {
+                    "type": "boolean"
+                },
+                "isSuperadmin": {
+                    "type": "boolean"
+                },
+                "isSystem": {
+                    "type": "boolean"
                 },
                 "name": {
                     "type": "string"
@@ -1099,6 +1113,26 @@
                     "items": {
                         "$ref": "#/definitions/gin-boilerplate_internal_iam_dto.PermissionResponse"
                     }
+                }
+            }
+        },
+        "gin-boilerplate_internal_iam_dto.RoleResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "isDefault": {
+                    "type": "boolean"
+                },
+                "isSuperadmin": {
+                    "type": "boolean"
+                },
+                "isSystem": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         },
@@ -1134,11 +1168,49 @@
                 "name": {
                     "type": "string"
                 },
+                "permissionIds": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "roleIds": {
                     "type": "array",
                     "items": {
                         "type": "string"
                     }
+                }
+            }
+        },
+        "gin-boilerplate_internal_iam_dto.UserDetailResponse": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "permissions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/gin-boilerplate_internal_iam_dto.UserPermissionItem"
+                    }
+                },
+                "roles": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/gin-boilerplate_internal_iam_dto.UserRoleItem"
+                    }
+                },
+                "updatedAt": {
+                    "type": "string"
                 }
             }
         },
@@ -1153,6 +1225,17 @@
                 },
                 "meta": {
                     "$ref": "#/definitions/gin-boilerplate_internal_iam_dto.PaginationMeta"
+                }
+            }
+        },
+        "gin-boilerplate_internal_iam_dto.UserPermissionItem": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         },
