# internal/iam/dto/role_response.go
@@ -1,9 +1,20 @@
 package dto
 
 type RoleResponse struct {
-	ID          string               `json:"id"`
-	Name        string               `json:"name"`
-	Permissions []PermissionResponse `json:"permissions"`
+	ID            string `json:"id"`
+	Name          string `json:"name"`
+	IsSystem      bool   `json:"isSystem"`
+	IsSuperadmin  bool   `json:"isSuperadmin"`
+	IsDefault     bool   `json:"isDefault"`
+}
+
+type RoleDetailResponse struct {
+	ID            string               `json:"id"`
+	Name          string               `json:"name"`
+	IsSystem      bool                 `json:"isSystem"`
+	IsSuperadmin  bool                 `json:"isSuperadmin"`
+	IsDefault     bool                 `json:"isDefault"`
+	Permissions   []PermissionResponse `json:"permissions"`
 }
 
 type PermissionResponse struct {
