# internal/iam/dto/user_response.go
@@ -11,7 +11,22 @@ type UserResponse struct {
 	UpdatedAt time.Time      `json:"updatedAt"`
 }
 
+type UserDetailResponse struct {
+	ID          string               `json:"id"`
+	Email       string               `json:"email"`
+	Name        string               `json:"name"`
+	Roles       []UserRoleItem       `json:"roles"`
+	Permissions []UserPermissionItem `json:"permissions"`
+	CreatedAt   time.Time            `json:"createdAt"`
+	UpdatedAt   time.Time            `json:"updatedAt"`
+}
+
 type UserRoleItem struct {
+	ID   string `json:"id"`
+	Name string `json:"name"`
+}
+
+type UserPermissionItem struct {
 	ID   string `json:"id"`
 	Name string `json:"name"`
 }
